# openrouter-translator

./: .env.example  .gitignore  .mcp.json  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  requirements.txt  vercel.json
api/: [...path].py  index.py  translate.py
api/auth/: [...path].py
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  security.py  services.py
docs/: architecture.md  backend.md  deployment.md
frontend/: next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/workspace/: page.tsx
frontend/src/components/: landing-client.tsx  login-form.tsx  register-form.tsx  workspace-client.tsx
frontend/src/lib/: api.ts  constants.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/workspace/: page.tsx
src/components/: landing-client.tsx  login-form.tsx  register-form.tsx  workspace-client.tsx
src/lib/: api.ts  constants.ts
