[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrouter-translator-api"
version = "1.0.0"
description = "Python backend for the OpenRouter Translator project."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.12,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "passlib[argon2]>=1.7.4,<2.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "psycopg[binary]>=3.2.6,<4.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5,<9.0.0",
  "ruff>=0.11.6,<1.0.0",
  "uvicorn>=0.34.1,<1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py311"
